--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@astrojs/react": "^2.1.1",
-    "@react-three/drei": "^9.65.3",
-    "@react-three/fiber": "^8.12.1",
+    "@react-three/drei": "9.22.9",
+    "@react-three/fiber": "8.3.1",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "astro": "^2.3.0",
