--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@react-three/fiber": "8.3.1",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
+    "@types/three": "^0.150.1",
     "astro": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^3.3.1",
+    "three": "^0.151.3"
   }
 }
